<resources>
    <string name="app_name">EduApp</string>
    <string name="login_title">Přihlášení</string>
    <string name="login_hint">Email nebo uživatelské jméno</string>
    <string name="password_hint">Heslo</string>
    <string name="login_button">Přihlásit</string>
    <string name="answer_option">Odpověď</string>
    <string name="next">Další</string>
    <string name="result_title">Výsledek</string>
    <string name="retry">Zopakovat</string>
    <string name="home">Domů</string>

    <string name="login_error_empty">Vyplňte uživatelské jméno a heslo</string>
    <string name="login_error_bad">Špatné přihlašovací údaje</string>
    <string name="progress_format">%1$d / %2$d</string>
    <string name="score_format">%1$d / %2$d</string>

    <string name="register">Registrovat</string>
    <string name="register_title">Registrace</string>
    <string name="register_button">Vytvořit účet</string>
    <string name="register_error_email_taken">Email už existuje</string>
    <string name="register_error_username_taken">Uživatelské jméno je obsazeno</string>
    <string name="register_error_password_mismatch">Hesla se neshodují</string>
    <string name="register_error_fields_empty">Vyplňte všechny údaje</string>

    <string name="reg_username_hint">Uživatelské jméno</string>
    <string name="reg_email_hint">Email</string>
    <string name="reg_password_hint">Heslo</string>
    <string name="reg_password_confirm_hint">Heslo znovu</string>
</resources>